<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TaxiNet</string>
    <string name="title_main">TaxiNet Home</string>
    <string name="title_activity_call_dialog">Call Options</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="call_taxi_firm">Call Taxi Firm</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="phone">Phone</string>
    <string name="connected_account">Connected Account</string>
    <string name="connected">Connected</string>
    <string name="usual_palce">Usual Place</string>
    <string name="add">Add</string>
    <string name="logout">Logout</string>
    <string name="accept">Accept</string>
    <string name="home_number">Home Number</string>
    <string name="street">Street</string>
    <string name="district">District</string>
    <string name="city">City</string>
    <string name="company_promotion">Company Promotion</string>
    <string name="first_name">Fisrt Name</string>
    <string name="last_name">Last Name</string>
    <string name="account">Account</string>
    <string name="trip_history">Trip History</string>
    <string name="save">Save</string>
	<string name="edit">Edit</string>
	<string name="cancel">Cancel</string>
	<string name="term">Term</string>
</resources>