<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp" >

        <ImageView
            android:id="@+id/riderImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_launcher" 
            android:layout_alignTop="@+id/et_first_name"
            android:layout_alignBottom="@+id/et_last_name"
            android:layout_marginRight="10dp"/>

        <EditText
            android:id="@+id/et_first_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@id/riderImage"
            android:gravity="left|center"
            android:inputType="text"
            android:text="@string/first_name"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/et_last_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/et_first_name"
            android:layout_alignParentRight="true"
            android:layout_below="@id/et_first_name"
            android:gravity="left|center"
            android:inputType="text"
            android:text="@string/last_name"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/riderImage"
            android:layout_marginTop="20dp"
            android:text="@string/account"
            android:textSize="24sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:id="@+id/rl_account_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_account"
            android:background="@drawable/boder"
            android:padding="10dp" >

            <TextView
                android:id="@+id/tv_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/et_email"
                android:layout_alignParentLeft="true"
                android:layout_alignRight="@+id/tv_password"
                android:layout_alignTop="@+id/et_email"
                android:gravity="bottom"
                android:text="@string/email"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_toRightOf="@id/tv_email"
                android:ems="10"
                android:inputType="textEmailAddress" />

            <TextView
                android:id="@+id/tv_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/et_phone"
                android:layout_alignParentLeft="true"
                android:layout_alignRight="@+id/tv_password"
                android:layout_alignTop="@+id/et_phone"
                android:layout_below="@id/tv_email"
                android:gravity="bottom"
                android:text="@string/phone"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@id/et_email"
                android:layout_toRightOf="@id/tv_phone"
                android:ems="10"
                android:inputType="phone" />

            <TextView
                android:id="@+id/tv_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/et_password"
                android:layout_alignTop="@+id/et_password"
                android:layout_below="@id/tv_phone"
                android:gravity="bottom"
                android:text="@string/password"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@id/et_phone"
                android:layout_toRightOf="@id/tv_password"
                android:ems="10"
                android:inputType="textPassword" />
        </RelativeLayout>

        <TextView
            android:id="@+id/tv_connected_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/rl_account_detail"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/connected_account"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/fb_status"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_below="@id/tv_connected_account"
            android:background="@drawable/boder"
            android:drawableLeft="@drawable/ic_fb"
            android:drawablePadding="5dp"
            android:gravity="left|center"
            android:padding="10dp"
            android:text="@string/connected"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_trip_history"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_below="@id/fb_status"
            android:layout_marginTop="10dp"
            android:background="@drawable/boder"
            android:gravity="center|left"
            android:padding="10dp"
            android:text="@string/trip_history"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_usual_palce"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_trip_history"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/usual_palce"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/ll_usual_place"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_usual_palce"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/home_address"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/boder"
                android:drawableLeft="@drawable/ic_info"
                android:drawablePadding="5dp"
                android:gravity="left|center"
                android:padding="10dp"
                android:text="@string/add"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/work_address"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:background="@drawable/boder"
                android:drawableLeft="@drawable/ic_info"
                android:drawablePadding="5dp"
                android:gravity="left|center"
                android:padding="10dp"
                android:text="@string/add"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll_usual_place"
            android:layout_marginTop="10dp"
            android:text="@string/logout" />
    </RelativeLayout>

</ScrollView>